修复destory方法添加属性注入实例

--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,6 @@ target/test-classes/com/spring/SingHimmaTest.class
 *.class
 target/classes/META-INF/maven/com.spring/Spring_WiringBean/pom.properties
 target/classes/Spring-SingHimma.xml
+target/classes/com/spring/Himma.class
+target/classes/META-INF/maven/com.spring/Spring_WiringBean/pom.properties
+target/classes/META-INF/maven/com.spring/Spring_WiringBean/pom.properties
