增加集合装配实例

--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,5 @@ target/classes/Spring-SingHimma.xml
 target/classes/com/spring/Himma.class
 target/classes/META-INF/maven/com.spring/Spring_WiringBean/pom.properties
 target/classes/META-INF/maven/com.spring/Spring_WiringBean/pom.properties
+target/classes/Spring-HimmaTeam.xml
+target/classes/META-INF/maven/com.spring/Spring_WiringBean/pom.properties
