添加装配空值实例

--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,4 @@ target/classes/META-INF/maven/com.spring/Spring_WiringBean/pom.properties
 target/classes/META-INF/maven/com.spring/Spring_WiringBean/pom.properties
 target/classes/Spring-HimmaTeam.xml
 target/classes/META-INF/maven/com.spring/Spring_WiringBean/pom.properties
+target/classes/com/spring/Himma.class
